Updated display albums setting

--- a/templates/admin/settings/index.html.twig
+++ b/templates/admin/settings/index.html.twig
@@ -35,16 +35,16 @@
             {{ form_widget(form.appName) }}
             {{ form_help(form.appName) }}
 
-{#            <hr class="border-neutral-500 my-5">#}
+            <hr class="border-neutral-500 my-5">
 
-{#            <div>#}
-{#                {{ form_label(form.displayAlbums) }} <br>#}
-{#                <label class="checkbox">#}
-{#                    {{ form_widget(form.displayAlbums) }}#}
-{#                    <span></span>#}
-{#                </label>#}
-{#                {{ form_help(form.displayAlbums) }}#}
-{#            </div>#}
+            <div>
+                {{ form_label(form.displayAlbums) }} (WIP)<br>
+                <label class="checkbox">
+                    {{ form_widget(form.displayAlbums) }}
+                    <span></span>
+                </label>
+                {{ form_help(form.displayAlbums) }}
+            </div>
 
             <hr class="border-neutral-500 my-5">
 
