Added Profile page and form

--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -16,7 +16,7 @@
                 <span class="text-white font-bold block">About me</span>
             </h3>
 
-            <p class="text-center md:text-left">{{ lipsum(300) }}</p>
+            <p class="text-center md:text-left">{{ settings.introduction }}</p>
         </div>
 
         <section class="mt-8 md:w-1/2">
