--- a/templates/admin/admin_base.html.twig
+++ b/templates/admin/admin_base.html.twig
@@ -36,7 +36,7 @@
 
                 {{ sidebar.route('Dashboard', path('admin_dashboard')) }}
                 {{ sidebar.route('Upload image', path('admin_upload')) }}
-                {{ sidebar.route('Profile', '#') }}
+                {{ sidebar.route('Profile', path('admin_profile')) }}
                 {{ sidebar.route('Settings', path('admin_settings')) }}
 
                 <hr class="border-neutral-500">
