--- a/templates/shared/sidebar.html.twig
+++ b/templates/shared/sidebar.html.twig
@@ -8,10 +8,10 @@
 
     <section class="pt-5 pl-5 pr-0 pb-8">
         <div class="flex flex-row items-center mb-5">
-            <img src="{{ asset('avatar/avatar.png') }}" alt="avatar" class="w-36 h-36 rounded-full bg-[#a0a0a0]">
+            <img src="{{ asset('avatar/' ~ settings.avatar)|default(asset('avatar/default.png')) }}" alt="avatar" class="w-36 h-36 rounded-full bg-[#a0a0a0]">
             <h3 class="absolute right-5 w-56 md:w-72 text-3xl mb-5 uppercase flex flex-col text-right mix-blend-difference">
-                <span class="text-sm">Lorem Ipsum</span>
-                <span class="text-white font-bold">Lorem Ipsilus</span>
+                <span class="text-sm">{{ settings.occupation }}</span>
+                <span class="text-white font-bold">{{ settings.name }}</span>
             </h3>
         </div>
     </section>
@@ -25,7 +25,7 @@
 
             {{ sidebar.route('Dashboard', path('admin_dashboard')) }}
             {{ sidebar.route('Upload image', path('admin_upload')) }}
-            {{ sidebar.route('Profile', '#') }}
+            {{ sidebar.route('Profile', path('admin_profile')) }}
             {{ sidebar.route('Settings', path('admin_settings')) }}
 
             <hr class="border-neutral-500">
