--- a/templates/admin/profile/index.html.twig
+++ b/templates/admin/profile/index.html.twig
@@ -3,5 +3,104 @@
 {% block title %}Profile{% endblock %}
 
 {% block body %}
-    {{ form(form) }}
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        /* The Modal (background) */
+        .modal {
+            display: none; /* Hidden by default */
+            position: fixed; /* Stay in place */
+            z-index: 1; /* Sit on top */
+            padding-top: 100px; /* Location of the box */
+            left: 0;
+            top: 0;
+            width: 100%; /* Full width */
+            height: 100%; /* Full height */
+            overflow: auto; /* Enable scroll if needed */
+            background-color: rgb(0, 0, 0); /* Fallback color */
+            background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+        }
+
+        /* Modal Content */
+        .modal-content {
+            margin: auto;
+            padding: 20px;
+            width: 80%;
+        }
+
+        /* The Close Button */
+        .close {
+            color: #aaaaaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: #000;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        #display-image {
+            width: 400px;
+            height: 400px;
+            border: 1px solid black;
+            background-position: center;
+            background-size: cover;
+            margin-bottom: 20px;
+        }
+    </style>
+
+    <button id="myBtn" class="button" style="width: 16rem;">Upload new avatar</button>
+
+    <div id="myModal" class="modal">
+        <div class="modal-content bg-zinc-700 rounded-xl">
+            <span class="close">&times;</span>
+            {{ form_start(avatar_form) }}
+                {{ form_widget(avatar_form.avatar) }}
+                <div id="display-image"></div>
+                {{ form_widget(avatar_form.submit) }}
+                <button type="reset" id="avatar_cancel">Cancel</button>
+            {{ form_end(avatar_form) }}
+        </div>
+    </div>
+
+    {{ form(profile_form) }}
+
+    <script>
+        const modal = document.getElementById("myModal");
+        const btn = document.getElementById("myBtn");
+        const span = document.getElementsByClassName("close")[0];
+        btn.onclick = function () {
+            modal.style.display = "block";
+        };
+        span.onclick = function () {
+            modal.style.display = "none";
+        };
+        window.onclick = function (event) {
+            if (event.target === modal) {
+                modal.style.display = "none";
+            }
+        };
+
+        const image_input = document.querySelector("#avatar_avatar");
+        image_input.addEventListener("change", function () {
+            const reader = new FileReader();
+            reader.addEventListener("load", () => {
+                const uploaded_image = reader.result;
+                document.querySelector("#display-image").style.backgroundImage = `url(${uploaded_image})`;
+            });
+            reader.readAsDataURL(this.files[0]);
+        });
+
+        const cancel = document.querySelector("#avatar_cancel");
+        cancel.addEventListener("click", function () {
+            document.querySelector("#display-image").style.backgroundImage = `none`;
+            modal.style.display = "none";
+        });
+    </script>
 {% endblock %}
