Disabled album toggle

--- a/templates/admin/settings/index.html.twig
+++ b/templates/admin/settings/index.html.twig
@@ -37,16 +37,16 @@
 
             <hr class="border-neutral-500 my-5">
 
-            <div>
-                {{ form_label(form.displayAlbums) }} (WIP)<br>
-                <label class="checkbox">
-                    {{ form_widget(form.displayAlbums) }}
-                    <span></span>
-                </label>
-                {{ form_help(form.displayAlbums) }}
-            </div>
+{#            <div>#}
+{#                {{ form_label(form.displayAlbums) }} (WIP)<br>#}
+{#                <label class="checkbox">#}
+{#                    {{ form_widget(form.displayAlbums) }}#}
+{#                    <span></span>#}
+{#                </label>#}
+{#                {{ form_help(form.displayAlbums) }}#}
+{#            </div>#}
 
-            <hr class="border-neutral-500 my-5">
+{#            <hr class="border-neutral-500 my-5">#}
 
             <div>
                 {{ form_widget(form.submit) }}
